Thu Jul  7 20:08:37 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_args.c (vm_caller_setup_arg_block): disable symbol block
	  argument optimization when tail call optimization is enabled,
	  in order to avoid SEGV.  [ruby-core:76288] [Bug #12565]

Thu Jul  7 16:37:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_round): [EXPERIMENTAL] adjust the case that the
	  receiver is close to the exact but unrepresentable middle value
	  of two values in the given precision.
	  http://d.hatena.ne.jp/hnw/20160702

Thu Jul  7 16:31:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_s_foreach, rb_io_s_readlines): convert arguments
	  just once before reading, instead of conversions for each lines.

Wed Jul  6 19:54:17 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_14.c, test/ruby/enc/test_case_comprehensive.rb:
	  Implement non-ASCII case conversion for ISO-8859-14, by Yutaro Tada.

Wed Jul  6 19:24:48 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_1.c, enc/iso_8859_15.c, enc/iso_8859_16.c:
	  Allign indenting to onigmo convention.

Wed Jul  6 18:59:13 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_15.c, test/ruby/enc/test_case_comprehensive.rb:
	  Implement non-ASCII case conversion for ISO-8859-15, by Maho Harada.

Wed Jul  6 18:34:21 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/iso_8859_16.c, test/ruby/enc/test_case_comprehensive.rb:
	  Implement non-ASCII case conversion for ISO-8859-16, by Satoshi Kayama.

Wed Jul  6 14:44:56 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): store $headers in LOCAL_HDRS for
	  depend files.

	* ext/digest/digest_conf.rb (digest_conf): add implementation
	  specific headers to $header.

	* ext/digest/{md5,rmd160,sha1,sha2}/depend: add LOCAL_HDRS to the
	  dependencies.

Wed Jul  6 08:59:35 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/http/generic_rquest.rb (write_header): A Request-Line must